--- a/app/src/main/res/layout/activity_trash.xml
+++ b/app/src/main/res/layout/activity_trash.xml
@@ -7,13 +7,22 @@
     tools:context=".TrashActivity">
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/txt_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:text="@string/trash_title"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="20dp"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_contact"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/txt_header"
+        app:layout_constraintBottom_toTopOf="@id/btn_delete_all"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
