--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,67 +13,65 @@
         />
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/btn_setting"
+        android:id="@+id/btn_trash"
         android:layout_width="@dimen/normal_icon_size"
         android:layout_height="@dimen/normal_icon_size"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="@dimen/basic_margin"
         android:layout_marginStart="@dimen/basic_margin"
+        android:src="@drawable/ic_delete"
+        android:tint="@color/colorGray"
+        android:visibility="gone"
+        />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/btn_setting"
+        android:layout_width="@dimen/normal_icon_size"
+        android:layout_height="@dimen/normal_icon_size"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/basic_margin"
+        android:layout_marginEnd="@dimen/basic_margin"
         android:src="@drawable/ic_setting"
         android:tint="@color/colorGray"
         />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btn_delete"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="@dimen/circle_size"
+        android:layout_height="@dimen/circle_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn_restore"
+        android:layout_marginEnd="45dp"
         android:background="@drawable/bg_circle"
         android:src="@drawable/ic_close"
+        android:layout_marginBottom="@dimen/basic_margin"
         />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btn_skip"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="@dimen/circle_size"
+        android:layout_height="@dimen/circle_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btn_restore"
+        android:layout_marginStart="45dp"
         android:background="@drawable/bg_circle"
         android:src="@drawable/ic_check"
+        android:layout_marginEnd="@dimen/basic_margin"
+        android:layout_marginBottom="@dimen/basic_margin"
         />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btn_restore"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/btn_skip"
+        app:layout_constraintBottom_toBottomOf="@id/btn_skip"
         android:background="@drawable/bg_circle"
         android:src="@drawable/ic_restore"
         />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_trash"
-        android:layout_width="100dp"
-        android:layout_height="75dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="100dp"
-        android:background="@color/colorGray"
-        >
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:src="@drawable/ic_delete"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
