--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,21 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
 
+    <color name="colorCloud">#ECF0F1</color>
+    <color name="colorSilver">#BDC3C7</color>
+    <color name="colorAsbestos">#7F8C8D</color>
+
+    <color name="colorGreen">#2ECC71</color>
+    <color name="colorGreenDeep">#27AE60</color>
+    <color name="colorBlue">#3498DB</color>
+    <color name="colorBlueDeep">#2980B9</color>
+    <color name="colorPurple">#9B59B6</color>
+    <color name="colorPurpleDeep">#8E44AD</color>
+    <color name="colorYellow">#F1C40F</color>
+    <color name="colorYellowDeep">#F39C12</color>
+    <color name="colorOrange">#E67E22</color>
+    <color name="colorOrangeDeep">#D35400</color>
+    <color name="colorRed">#E74C3C</color>
+    <color name="colorRedDeep">#C0392B</color>
+
 </resources>
