--- a/app/src/main/res/layout/view_contact_card.xml
+++ b/app/src/main/res/layout/view_contact_card.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_round_rect"
@@ -26,6 +27,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="@dimen/basic_margin"
             android:layout_marginStart="@dimen/basic_margin"
+            android:background="@drawable/bg_circle"
             />
 
         <androidx.appcompat.widget.AppCompatTextView
