--- a/app/src/main/res/layout/activity_trash.xml
+++ b/app/src/main/res/layout/activity_trash.xml
@@ -21,7 +21,7 @@
         android:id="@+id/list_contact"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_back"
+        app:layout_constraintTop_toBottomOf="@id/txt_header"
         app:layout_constraintBottom_toTopOf="@id/btn_delete_all"
         />
 
