--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -40,4 +40,17 @@
         android:layout_marginBottom="100dp"
         />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/btn_license"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/setting_license"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="50dp"
+        />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
