--- a/app/src/main/res/layout/activity_trash.xml
+++ b/app/src/main/res/layout/activity_trash.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TrashActivity">
+    tools:context=".TrashActivity"
+    android:background="@color/colorWhite">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/txt_header"
