--- a/app/src/main/res/layout/view_trash_item.xml
+++ b/app/src/main/res/layout/view_trash_item.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorWhite">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/img_thumbnail"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="@dimen/item_image_size"
+        android:layout_height="@dimen/item_image_size"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="@dimen/item_margin"
+        android:layout_marginTop="@dimen/item_margin"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/txt_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/img_thumbnail"
         app:layout_constraintStart_toEndOf="@id/img_thumbnail"
         android:layout_marginStart="10dp"
         />
@@ -29,6 +30,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/txt_name"
         app:layout_constraintStart_toStartOf="@id/txt_name"
+        android:layout_marginTop="5dp"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -37,15 +39,21 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/txt_phone"
         app:layout_constraintStart_toStartOf="@id/txt_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/contact_email_default"
+        android:layout_marginBottom="@dimen/item_margin"
         />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/btn_restore"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btn_delete"
         android:background="@drawable/bg_round_rect"
+        android:layout_marginEnd="@dimen/item_margin"
+        android:layout_marginTop="@dimen/item_margin"
         >
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
@@ -54,26 +62,36 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/img_icon_1"
             />
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/img_icon_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_restore"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="5dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/btn_delete"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:background="@drawable/bg_round_rect"
+        android:layout_marginEnd="@dimen/item_margin"
+        android:layout_marginBottom="@dimen/item_margin"
+        app:layout_constraintTop_toBottomOf="@id/btn_restore"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/colorRed"
         >
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
@@ -82,15 +100,20 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/img_icon_2"
             />
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/img_icon_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_restore"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="5dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
