Edit xml naming and ui

--- a/app/src/main/res/drawable/bg_round_rect.xml
+++ b/app/src/main/res/drawable/bg_round_rect.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="@dimen/main_card_radius" />
+    <corners android:radius="@dimen/radius_main_card" />
     <solid android:color="@color/colorGray" />
 </shape>
