--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -10,14 +10,14 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/btn_back"
-        android:layout_width="@dimen/normal_icon_size"
-        android:layout_height="@dimen/normal_icon_size"
+        android:layout_width="@dimen/size_main_button_medium"
+        android:layout_height="@dimen/size_main_button_medium"
         android:src="@drawable/ic_back"
         android:tint="@color/colorBlack"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="@dimen/basic_margin"
-        android:layout_marginStart="@dimen/basic_margin"
+        android:layout_marginTop="@dimen/margin_main"
+        android:layout_marginStart="@dimen/margin_main"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
