--- a/app/src/main/res/layout/view_contact_card.xml
+++ b/app/src/main/res/layout/view_contact_card.xml
@@ -11,8 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_round_rect"
-        android:layout_marginStart="@dimen/basic_margin"
-        android:layout_marginEnd="@dimen/basic_margin"
+        android:layout_marginStart="@dimen/margin_card_outline"
+        android:layout_marginEnd="@dimen/margin_card_outline"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,8 +25,8 @@
             android:layout_height="100dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="@dimen/basic_margin"
-            android:layout_marginStart="@dimen/basic_margin"
+            android:layout_marginTop="@dimen/margin_card_outline"
+            android:layout_marginStart="@dimen/margin_card_outline"
             android:background="@drawable/bg_circle"
             />
 
@@ -77,7 +77,7 @@
             app:layout_constraintTop_toBottomOf="@id/view_2"
             app:layout_constraintStart_toStartOf="@id/img_thumbnail"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="@dimen/basic_margin"
+            android:layout_marginBottom="@dimen/margin_card_outline"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
