--- a/app/src/main/res/layout/view_trash_item.xml
+++ b/app/src/main/res/layout/view_trash_item.xml
@@ -7,12 +7,12 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/img_thumbnail"
-        android:layout_width="@dimen/item_image_size"
-        android:layout_height="@dimen/item_image_size"
+        android:layout_width="@dimen/size_item_image"
+        android:layout_height="@dimen/size_item_image"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="@dimen/item_margin"
-        android:layout_marginTop="@dimen/item_margin"
+        android:layout_marginStart="@dimen/margin_item"
+        android:layout_marginTop="@dimen/margin_item"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -41,7 +41,7 @@
         app:layout_constraintStart_toStartOf="@id/txt_name"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="@string/contact_email_default"
-        android:layout_marginBottom="@dimen/item_margin"
+        android:layout_marginBottom="@dimen/margin_item"
         />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -52,8 +52,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btn_delete"
         android:background="@drawable/bg_round_rect"
-        android:layout_marginEnd="@dimen/item_margin"
-        android:layout_marginTop="@dimen/item_margin"
+        android:layout_marginEnd="@dimen/margin_item"
+        android:layout_marginTop="@dimen/margin_item"
         >
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
@@ -87,8 +87,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:background="@drawable/bg_round_rect"
-        android:layout_marginEnd="@dimen/item_margin"
-        android:layout_marginBottom="@dimen/item_margin"
+        android:layout_marginEnd="@dimen/margin_item"
+        android:layout_marginBottom="@dimen/margin_item"
         app:layout_constraintTop_toBottomOf="@id/btn_restore"
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/colorRed"
