--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="normal_icon_size">35dp</dimen>
-    <dimen name="basic_margin">26dp</dimen>
-    <dimen name="main_card_radius">15dp</dimen>
-    <dimen name="main_button_circle_size">65dp</dimen>
-    <dimen name="item_image_size">50dp</dimen>
-    <dimen name="item_margin">16dp</dimen>
+    <!-- [what]_[where]_[desc]_[size] -->
+
+    <dimen name="size_main_icon">35dp</dimen>
+    <dimen name="size_main_button_large">65dp</dimen>
+    <dimen name="size_main_button_medium">40dp</dimen>
+    <dimen name="size_item_image">50dp</dimen>
+    <dimen name="size_card_image">100dp</dimen>
+
+    <dimen name="radius_main_card">15dp</dimen>
+
+    <dimen name="margin_main">26dp</dimen>
+    <dimen name="margin_card_outline">26dp</dimen>
+    <dimen name="margin_card_inline">16dp</dimen>
+    <dimen name="margin_item">16dp</dimen>
+
+    <dimen name="height_header">75dp</dimen>
+
+    <dimen name="width_item_button">100dp</dimen>
+
+
 </resources>
