--- a/app/src/main/res/layout/activity_trash.xml
+++ b/app/src/main/res/layout/activity_trash.xml
@@ -7,34 +7,55 @@
     tools:context=".TrashActivity"
     android:background="@color/colorWhite">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/txt_header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/trash_title"
-        android:layout_marginTop="20dp"
-        />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_header"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_header"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/btn_back"
+            android:layout_width="@dimen/size_main_button_medium"
+            android:layout_height="@dimen/size_main_button_medium"
+            android:src="@drawable/ic_back"
+            android:tint="@color/colorBlack"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="@dimen/margin_main"
+            />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="@string/trash_title"
+            style="@style/headerTitle"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_contact"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/txt_header"
+        app:layout_constraintTop_toBottomOf="@id/layout_header"
         app:layout_constraintBottom_toTopOf="@id/btn_delete_all"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/btn_delete_all"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height_button_bottom"
         android:text="@string/trash_delete_all"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="100dp"
+        android:background="@color/RedSalsa"
+        style="@style/bottomButtonText"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
