--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
 
     <style name="headerTitle">
         <item name="android:textColor">@color/colorBlack</item>
-        <item name="android:textSize">50sp</item>
+        <item name="android:textSize">30sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
@@ -22,6 +22,7 @@
     <style name="itemTitle">
         <item name="android:textColor">@color/colorBlack</item>
         <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="itemSubText">
@@ -34,7 +35,7 @@
         <item name="android:textSize">13sp</item>
     </style>
 
-    <style name="itemButtonText">
+    <style name="itemAccent">
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">bold</item>
@@ -42,7 +43,7 @@
 
     <style name="cardTitle">
         <item name="android:textColor">@color/colorWhite</item>
-        <item name="android:textSize">45sp</item>
+        <item name="android:textSize">38sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
@@ -58,9 +59,16 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="cardDescText">
+    <style name="cardSubtitle">
         <item name="android:textColor">@color/colorWhite</item>
         <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="bottomButtonText">
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textSize">30dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
     </style>
 
 </resources>
