--- a/app/src/main/res/layout/view_contact_card.xml
+++ b/app/src/main/res/layout/view_contact_card.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_card"
@@ -44,6 +45,7 @@
             style="@style/cardTitle"
             android:maxLines="2"
             android:ellipsize="end"
+            android:breakStrategy="simple"
             />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -59,10 +61,12 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txt_phone"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/view_1"
             app:layout_constraintStart_toStartOf="@id/img_thumbnail"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/margin_card_outline"
             android:text="@string/test_phone"
             style="@style/cardSubText"
             />
@@ -79,13 +83,17 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txt_email"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/view_2"
             app:layout_constraintStart_toStartOf="@id/img_thumbnail"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="@dimen/margin_card_outline"
             android:layout_marginBottom="@dimen/margin_card_outline"
-            style="@style/cardSubTextDefault"
+            style="@style/cardSubText"
+            android:maxLines="1"
+            android:ellipsize="end"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
