Add license info

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -23,6 +23,8 @@
     <dimen name="height_dialog_message">130dp</dimen>
     <dimen name="height_dialog_button">60dp</dimen>
 
+    <dimen name="height_sub_title">50dp</dimen>
+
     <dimen name="width_item_button">100dp</dimen>
 
     <dimen name="elevation_main">10dp</dimen>
